@@ -1,200 +1,0 @@
-Source: grass
-Maintainer: Debian GIS Project <pkg-grass-devel@lists.alioth.debian.org>
-Uploaders: Francesco Paolo Lovergine <frankie@debian.org>,
-           Bas Couwenberg <sebastic@debian.org>
-Section: science
-Priority: optional
-Build-Depends: autoconf2.13,
-               autotools-dev,
-               bison,
-               debhelper (>= 9),
-               dh-python,
-               doxygen,
-               fakeroot,
-               flex,
-               graphviz,
-               libblas-dev,
-               libbz2-dev,
-               libcairo2-dev,
-               libfftw3-dev,
-               libfreetype6-dev,
-               libgdal-dev (>= 2.0),
-               libgeos-dev,
-               libglu1-mesa-dev,
-               libjpeg-dev,
-               liblapack-dev,
-               liblas-c-dev (>= 1.8.0-8~),
-               libmotif-dev | lesstif2-dev,
-       default-libmysqlclient-dev,
-               libncurses5-dev,
-               libnetcdf-dev,
-               libpng-dev,
-               libpq-dev,
-               libproj-dev,
-               libreadline-dev,
-               libsqlite3-dev,
-               libtiff-dev,
-               libwxgtk3.0-dev,
-               libxmu-dev,
-               netcdf-bin,
-# install optipng if compressing the PNG images in the programmers' manual
-#              optipng,
-# proj-bin needed for nad2bin during config
-               proj-bin,
-               python,
-               python-dev,
-               python-numpy,
-               python-pil,
-               python-ply,
-               python-wxgtk3.0,
-               unixodbc-dev,
-               zlib1g-dev
-Standards-Version: 4.1.1
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-grass/grass.git
-Vcs-Git: https://anonscm.debian.org/git/pkg-grass/grass.git
-Homepage: http://grass.osgeo.org/
-
-Package: grass
-Architecture: all
-Section: metapackages
-Depends: grass-core,
-         grass-gui,
-         ${misc:Depends}
-Recommends: grass-doc
-Suggests: grass-dev
-Description: Geographic Resources Analysis Support System (GRASS GIS)
- Commonly referred to as GRASS, this is a Geographic Information
- System (GIS) used for geospatial data management and analysis,
- image processing, graphics/map production, spatial modeling, and
- visualization. GRASS is currently used in academic and commercial
- settings around the world, as well as by many government agencies
- and environmental consulting companies.
- .
- Install this virtual package to get a full GRASS system.
-
-Package: grass-core
-Architecture: any
-Depends: grass-doc,
-         ${shlibs:Depends},
-         ${python:Depends},
-         ${misc:Depends}
-Recommends: gdal-bin,
-# cs2cs used by m.proj, gdalinfo+gdal_translate used by a number of scripts
-            proj-bin
-Suggests: grass-dev,
-          grass-gui,
-# used by v.in.e00
-          e00compr,
-          avce00,
-# used by i.spectral
-          gnuplot,
-# used by v.in.gpsbabel
-          gpsbabel,
-# used by v.in.garmin
-          gpstrans,
-# used by NVIZ, d.out.gpsdrive, r.out.mpeg
-          netpbm,
-# used by v.kridge
-          python-rpy2,
-          python-termcolor
-Breaks: grass (<< 6.4.2-1~)
-Provides: grass@ABI@
-Replaces: grass (<< 6.4.2-1~)
-Description: GRASS GIS core components
- Commonly referred to as GRASS, this is a Geographic Information
- System (GIS) used for geospatial data management and analysis,
- image processing, graphics/map production, spatial modeling, and
- visualization. GRASS is currently used in academic and commercial
- settings around the world, as well as by many government agencies
- and environmental consulting companies.
- .
- This package contains the core processing components, but not the GUI.
-
-Package: grass-gui
-Architecture: any
-Depends: grass-core,
-# pyGL needed for wxNviz
-         python-opengl,
-         python-wxgtk3.0,
-         xterm | x-terminal-emulator,
-         ${python:Depends},
-         ${misc:Depends}
-Recommends:
-# gs needed for wxPsmap PDF export
-            ghostscript,
-# PIL needed for wxPsmap preview
-            python-pil,
-            python-matplotlib
-Breaks: grass (<< 6.4.2-1~)
-Replaces: grass (<< 6.4.2-1~)
-Description: GRASS GIS graphical user interfaces
- Commonly referred to as GRASS, this is a Geographic Information
- System (GIS) used for geospatial data management and analysis,
- image processing, graphics/map production, spatial modeling, and
- visualization. GRASS is currently used in academic and commercial
- settings around the world, as well as by many government agencies
- and environmental consulting companies.
- .
- This package contains the GRASS GUIs.
-
-Package: grass-doc
-Section: doc
-Architecture: all
-Depends: ${misc:Depends}
-Suggests: grass,
-          grass-dev-doc
-Description: GRASS GIS user documentation
- Commonly referred to as GRASS, this is a Geographic Information
- System (GIS) used for geospatial data management and analysis,
- image processing, graphics/map production, spatial modeling, and
- visualization. GRASS is currently used in academic and commercial
- settings around the world, as well as by many government agencies
- and environmental consulting companies.
- .
- This package contains HTML documentation for the GRASS system.
-
-Package: grass-dev-doc
-Section: doc
-Architecture: all
-Depends: libjs-jquery,
-         ${misc:Depends}
-Suggests: grass
-Description: GRASS GIS Programmers' Manual
- Commonly referred to as GRASS, this is a Geographic Information
- System (GIS) used for geospatial data management and analysis,
- image processing, graphics/map production, spatial modeling, and
- visualization. GRASS is currently used in academic and commercial
- settings around the world, as well as by many government agencies
- and environmental consulting companies.
- .
- This package contains the HTML version of the GRASS Programmers' Manual.
-
-Package: grass-dev
-Section: devel
-Architecture: any
-Depends: grass-core (= ${binary:Version}),
-# fakeroot used by patches/htmlgen-fakeroot; see changelog entry for 5.7.0+6.0.0beta2-2
-         fakeroot,
-         libfreetype6-dev,
-         libgdal-dev,
-         libpq-dev,
-         libproj-dev,
-         python,
-         ${shlibs:Depends},
-         ${misc:Depends}
-# Subversion is needed by g.extension, a primary motivator for installing the grass-dev pkg
-Recommends: subversion
-Suggests: grass-dev-doc,
-          pkg-config
-Description: GRASS GIS development files
- Commonly referred to as GRASS, this is a Geographic Information
- System (GIS) used for geospatial data management and analysis,
- image processing, graphics/map production, spatial modeling, and
- visualization. GRASS is currently used in academic and commercial
- settings around the world, as well as by many government agencies
- and environmental consulting companies.
- .
- This package contains the header files for developing with GRASS.
- Install this package if you wish to develop software that manipulates
- GRASS data sets or install addons using the g.extension module.
-
